--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.10",
+    "@thirdweb-dev/react": "^2.9.7",
+    "@thirdweb-dev/sdk": "^2.4.9",
+    "ethers": "^5.7.0",
     "next": "latest",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-spinners": "^0.13.4"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
